apps/system/platform/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
